--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	Facebook: 		https://www.facebook.com/fh5co
 
 	//////////////////////////////////////////////////////
-	 -->
+-->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -36,7 +36,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -75,7 +75,7 @@
 									<li><a href="https://www.linkedin.com/in/hsengivs/"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://github.com/HsengivS"><i class="icon-github"></i></a></li>
 									<li><a href="https://www.facebook.com/bala.vignesh.144734"><i class="icon-facebook2"></i></a></li>
-									<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+									<li><a href="/home/vignesh-smvp/Documents/tutorial testing/RESUMES/vignesh/bootstrap/personal-website/yellow color/profile-master/templates/VIGNESH CV .pdf"><i class="fa fa-file-pdf-o" style="font-size:30px*30px;color:white"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -236,7 +236,7 @@
 	</div>
 
 
-	<div id="fh5co-features" class="animate-box">
+	<!-- <div id="fh5co-features" class="animate-box">
 		<div class="container">
 			<div class="services-padding">
 				<div class="row">
@@ -321,6 +321,81 @@
 							</div>
 						</div>
 					</div>
+				</div>
+			</div>
+		</div>
+	</div> -->
+	<div id="fh5co-work" class="fh5co-bg-dark">
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>Portfolio</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="https://github.com/HsengivS/machine-Learning" class="work" style="background-image: url(images/portfolio-1.jpg);">
+						<div class="desc">
+							<h3>Machine Learning</h3>
+							<span></span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="https://github.com/HsengivS/NLP" class="work" style="background-image: url(images/portfolio-2.jpg);">
+						<div class="desc">
+							<h3>NLP</h3>
+							<span></span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="https://github.com/HsengivS/Statistics" class="work" style="background-image: url(images/portfolio-3.jpg);">
+						<div class="desc">
+							<h3>Statistics</h3>
+							<span></span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="https://public.tableau.com/profile/vignesh4475#!/vizhome/ProsperLoanData_11/ProsperLoanStory-Version1" class="work" style="background-image: url(images/portfolio-04.jpg);">
+						<div class="desc">
+							<h3>Tableau</h3>
+							<span></span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="https://github.com/HsengivS/Python-Flask" class="work" style="background-image: url(images/portfolio-05.jpg);">
+						<div class="desc">
+							<h3>Python-Flask</h3>
+							<span></span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="#" class="work" style="background-image: url(images/R-portfolio.jpg);">
+						<div class="desc">
+							<h3>R</h3>
+							<span></span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="https://github.com/HsengivS/Deep-Learning" class="work" style="background-image: url(images/deep-learning.jpg);">
+						<div class="desc">
+							<h3>Deep Learning</h3>
+							<span></span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="https://hsengivs.azurewebsites.net" class="work" style="background-image: url(images/old-personal-website.jpg);">
+						<div class="desc">
+							<h3>Web Development</h3>
+							<span></span>
+						</div>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -439,7 +514,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-work" class="fh5co-bg-dark">
+	<!-- <div id="fh5co-work" class="fh5co-bg-dark">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
@@ -504,7 +579,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="https://github.com/HsengivS/Web-Development" class="work" style="background-image: url(images/portfolio-8.jpg);">
+					<a href="https://hsengivs.azurewebsites.net" class="work" style="background-image: url(images/portfolio-8.jpg);">
 						<div class="desc">
 							<h3>Web Development</h3>
 							<span></span>
@@ -513,9 +588,9 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
-	<div id="fh5co-blog">
+	<!-- <div id="fh5co-blog">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
@@ -571,7 +646,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- <div id="fh5co-started" class="fh5co-bg-dark">
 		<div class="overlay"></div>
