commit 2 changes schooling description

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 									<span class="company"><a href="https://www.justdial.com/Chennai/Gill-Adarsh-Matriculation-Higher-Secondary-School-Near-Balaji-Nagar-Near-BSNL-Telephone-Staff-Quarters-Royapettah/044P4180518_BZDET">Gill Adarsh Mat. Hr. Sec. School</a>- 2011</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Completed SSLC and was a Basket ball player</p>
 								</div>
 							</div>
 						</li>
