commit 3 changes previous website link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Profile &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Vignesh Saravanan</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -53,6 +53,7 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
 
 	</head>
 	<body>
@@ -75,7 +76,8 @@
 									<li><a href="https://www.linkedin.com/in/hsengivs/"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://github.com/HsengivS"><i class="icon-github"></i></a></li>
 									<li><a href="https://www.facebook.com/bala.vignesh.144734"><i class="icon-facebook2"></i></a></li>
-									<li><a href="/home/vignesh-smvp/Documents/tutorial testing/RESUMES/vignesh/bootstrap/personal-website/yellow color/profile-master/templates/VIGNESH CV .pdf"><i class="fa fa-file-pdf-o" style="font-size:30px*30px;color:white"></i></a></li>
+									<li><a href="https://twitter.com/HsengivS"><i class="icon-twitter3"></i></a></li>
+									<li><a href="VIGNESH CV .pdf"><i class="fa fa-file-pdf-o" style="font-size:30px*30px;color:white"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -112,7 +114,7 @@
 							<li><a href="https://github.com/HsengivS"><i class="icon-github"></i></a></li>
 							<li><a href="https://www.facebook.com/bala.vignesh.144734"><i class="icon-facebook3"></i></a></li>
 							<li><a href="https://twitter.com/HsengivS"><i class="icon-twitter2"></i></a></li>
-							<li><a href="https://vigneshsaravanan.herokuapp.com/"><i class="icon-dribbble2"></i></a></li>
+							<li><a href="https://hsengivs.azurewebsites.net"><i class="icon-dribbble2"></i></a></li>
 						</ul>
 					</p>
 				</div>
