--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Stats-Models</span><span class="value-right">70%</span></h3>
+						<h3><span class="name-left">Flask-REST</span><span class="value-right">70%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
