--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 								<i class="icon-briefcase"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Building Visualization</h3>
+								<h3>Building Visualizations</h3>
 								<p>                                                                           </p>
 							</div>
 						</div>
