--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 									<span class="company"><a href="http://kognetion.com/">Kognetion</a> - OCT 2018 - Current</span>
 								</div>
 								<div class="timeline-body">
-									<p>Working on handling 154 terabytes of data</p>
+									<p>Working on handling 100 terabytes of data</p>
 									<p>Technologies used : Python, Spark, R, mongoDB, MySQL, Tableau, Excel, REST api</p>
 									<p>Packages used : Spacy, NLTK, Gensim,  Tensorflow, Flask, pymongo, mongoengine, sklearn, numpy, pandas, plotly, seaborn</p>
 								</div>
@@ -352,7 +352,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="https://github.com/HsengivS/Statistics" class="work" style="background-image: url(images/portfolio-3.jpg);">
+					<a href="https://github.com/HsengivS" class="work" style="background-image: url(images/portfolio-3.jpg);">
 						<div class="desc">
 							<h3>Statistics</h3>
 							<span></span>
