--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="https://github.com/HsengivS/Deep-Learning" class="work" style="background-image: url(images/deep-learning.jpg);">
+					<a href="https://github.com/HsengivS" class="work" style="background-image: url(images/deep-learning.jpg);">
 						<div class="desc">
 							<h3>Deep Learning</h3>
 							<span></span>
