--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="https://hsengivs.azurewebsites.net" class="work" style="background-image: url(images/old-personal-website.jpg);">
 						<div class="desc">
-							<h3>Web Development</h3>
+							<h3>Predictive Web Application</h3>
 							<span></span>
 						</div>
 					</a>
