--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							<li><a href="https://github.com/HsengivS"><i class="icon-github"></i></a></li>
 							<li><a href="https://www.facebook.com/bala.vignesh.144734"><i class="icon-facebook3"></i></a></li>
 							<li><a href="https://twitter.com/HsengivS"><i class="icon-twitter2"></i></a></li>
-							<li><a href="https://hsengivs.azurewebsites.net"><i class="icon-dribbble2"></i></a></li>
+							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
 						</ul>
 					</p>
 				</div>
