--- a/index.html
+++ b/index.html
@@ -139,11 +139,25 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Full Stack Python & ML Developer</h3>
-									<span class="company"><a href="http://kognetion.com/">Kognetion</a> - OCT 2018 - Current</span>
+									<h3 class="timeline-title">Machine Learning Engineer</h3>
+									<span class="company"><a href="http://www.sps.co.in/">Scientific Publishing Services</a> - JULY 2019 - Current</span>
 								</div>
 								<div class="timeline-body">
-									<p>Working on handling 100 terabytes of data</p>
+									<p>Surfing and Exploring more in Natural Language Processing and Artificial Intelligence</p>
+									<!-- <p>Technologies used : Python, Spark, R, mongoDB, MySQL, Tableau, Excel, REST api</p>
+									<p>Packages used : Spacy, NLTK, Gensim,  Tensorflow, Flask, pymongo, mongoengine, sklearn, numpy, pandas, plotly, seaborn</p> -->
+								</div>
+							</div>
+						</li>
+            <li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Full Stack Python & ML Developer</h3>
+									<span class="company"><a href="http://kognetion.com/">Kognetion</a> - OCT 2018 - JULY 2019</span>
+								</div>
+								<div class="timeline-body">
+									<p>Worked on handling 100 terabytes of data</p>
 									<p>Technologies used : Python, Spark, R, mongoDB, MySQL, Tableau, Excel, REST api</p>
 									<p>Packages used : Spacy, NLTK, Gensim,  Tensorflow, Flask, pymongo, mongoengine, sklearn, numpy, pandas, plotly, seaborn</p>
 								</div>
