--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
 					<p>I am an IBM Certified Analytics professional and a Full Stack Python Developer skilled with Machine learning, Natural Language Processing and Data Visualization techniques and has the ability to work with the complex and large data set and has good knowledge of Machine Learning Algorithms.</p>
-					<p>I have less than two year of experience in Natural Language Processing and Artificial Intelligence. </p>
+					<p>I have two year of experience in Natural Language Processing and Artificial Intelligence. </p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://www.linkedin.com/in/hsengivs/"><i class="icon-linkedin2"></i></a></li>
